# footy-alerts

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: backend.yml  fly.yml  rust.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  fly.toml  litestream.yml
backend/.github/workflows/: fly.yml
backend/event_processor/src/: processor.rs
backend/notifier/: Cargo.toml
backend/notifier/src/: lib.rs
backend/squiggle/: Cargo.toml
backend/squiggle/src/: lib.rs  types.rs
backend/squiggle/src/event/: client.rs
backend/squiggle/src/rest/: mod.rs  types.rs
backend/src/: api_error.rs  api_response.rs  events.rs  lib.rs  main.rs  notifier.rs  processor.rs  routes.rs
backend/src/api/: error.rs  event_task.rs  mod.rs  routes.rs
backend/src/store/: mod.rs
backend/store/: Cargo.toml
backend/store/migrations/: 20240413080236_initial.sql
backend/store/src/: lib.rs  types.rs
backend/tests/: example_game.json  example_round.json  integration_tests.rs
event_processor/: Cargo.toml
event_processor/src/: processor.rs
frontend/: .env  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html  app.pcss  service-worker.js
frontend/src/routes/: +page.svelte
frontend/src/routes/(components)/: about.svelte  alert-settings.svelte  index.ts  iosSettings.svelte  scores.svelte
notifier/: Cargo.toml
notifier/src/: lib.rs
squiggle/: Cargo.toml
squiggle/src/: types.rs
squiggle/src/event/: client.rs  mod.rs  types.rs
squiggle/src/rest/: mod.rs  types.rs
src/: main.rs
store/: README.md
store/migrations/: 20240413080236_initial.sql
store/src/: lib.rs  types.rs
