[workspace]
members = ["store", "event_processor", "squiggle", "notifier"]

[workspace.lints.clippy]
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
pedantic = "deny"


[package]
name = "footy-alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_processor = { path = "event_processor" }
notifier = { path = "notifier" }
squiggle = { path = "squiggle" }
store = { path = "store" }

dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
http = "0.2.12"
serde = { version = "1.0.197", features = ["derive"] }
axum = "0.7.5"
tower-http = { version = "0.5", features = ["tracing", "trace", "cors"] }
urlencoding = "2.1"
futures-util = "0.3.30"
sentry = "0.34.0"