[workspace]
members = [ "squiggle" ]

[workspace.lints.clippy]
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
pedantic = "deny"

[package]
name = "footy-alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
squiggle = { path = "squiggle" }

axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
sentry = { version = "0.34.0", features = ["default", "tracing", "tower", "tower-http"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["tracing", "trace", "cors", "compression-full", "request-id", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
urlencoding = "2.1"
web-push = "0.10.1"

[dev-dependencies]
httptest = "0.16.1"
