[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
squiggle = { path = "../squiggle" }
store = { path = "../store" }

thiserror = "1"
web-push = "0.10.1"
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.21.7"
tracing = "0.1.40"
futures = "0.3.30"
