[package]
name = "squiggle"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
sqlx = { version = "0.8" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
reqwest-eventsource = "0.6.0"
async-stream = "0.3.5"