[package]
name = "store"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
squiggle = { path = "../squiggle" }

serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1"
tracing = "0.1.40"
serde = { version = "1.0.203", features = ["derive"] }
